Add Bean support
Signed-off-by: Dmitry Aleksandrov <dmitry.aleksandrov@oracle.com>